tests/expectations/compiler/array/array_bounds_fail.out
DCE_ENABLED:
Error [ESAZ0374010]: Array index 8 out of bounds (array length is 8).
    --> compiler-test:6:17
     |
   6 |             x = a[i];
     |                 ^^^^

DCE_DISABLED:
Error [ESAZ0374010]: Array index 8 out of bounds (array length is 8).
    --> compiler-test:6:17
     |
   6 |             x = a[i];
     |                 ^^^^
